# RustyRosetta

./: .gitignore  Cargo.toml  README.md
src/: authenticated_type.rs  checksum.rs  codec.rs  compress.rs  crypt.rs  lib.rs
